[tool.poetry]
name = "skin"
version = "0.0.1"
description = "Light-weight Python ORM"
authors = ["Vladimir Minev <minev.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
pydantic = "^1.10.7"
pre-commit = "^3.2.2"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
# src_paths = ["skin"]
force_single_line = true
# # lexicographical = true
# single_line_exclusions = ["typing"]
