[tool.poetry]
name = "tunica"
version = "0.0.1"
description = "Light-weight Python ORM"
authors = ["Vladimir Minev <minev.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.3.0"}
isort = "^5.12.0"
pre-commit = "^3.2.2"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
single_line_exclusions = ["typing"]
